--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/bells307/unit-tracing"
 
 [dependencies]
-tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
